# tiny-captive-portal

./: CMakeLists.txt  README.md
cmake/: linux_arm-fsl.cmake  linux_arm.cmake  linux_x86.cmake  macos.cmake  windows_x86.cmake
source/: CMakeLists.txt
source/cmake/: linux_arm-fsl.cmake  linux_arm.cmake  linux_x86.cmake  macos.cmake  windows_x86.cmake
source/src/: CMakeLists.txt
source/src/captive-portal/: CMakeLists.txt  CaptivePortal.c  CaptivePortal.h  CaptivePortalHandle.c  CaptivePortalHandle.h  DNSServer.c  DNSServer.h  WebServer.c  WebServer.h  WebServerHandler.c  WebServerHandler.h
source/src/sample/: CMakeLists.txt  main.c
